--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <!-- Hero Section -->
 <section class="hero d-flex align-items-center justify-content-start">
   <div class="hero-overlay"></div>
-  <div class="hero-content mx-5">
-    <div class="row">
+  <div class="hero-content mx-5 w-100">
+    <div class="row w-100">
       <h1 class="col-12 col-md-7 text-white ">Inspiring Families To Dream Again</h1>
     </div>
 
@@ -14,7 +14,7 @@
 
     <div class="row mt-5">
       <button mat-raised-button color="accent" class="col-auto">
-        Start your Journey Now
+        Start your Journey
       </button>
     </div>
   </div>
@@ -51,7 +51,8 @@
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/family1.webp" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/family1.webp" alt="Family spending time together"
+          title="Build and secure your wealth." class="img-fluid" width="100%" height="540px" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
@@ -63,7 +64,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Start a business
@@ -75,7 +76,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" />
+        <img mat-card-image src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
@@ -104,7 +105,7 @@
   <section class="container align-content-center">
     <div class="row">
       <div class="col-4 d-none d-md-block">
-        <img src="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid w-100" />
+        <img src="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
       </div>
       <div class="col-12 col-md-8">
         <div class="py-4">
@@ -112,7 +113,8 @@
           <h5>Generational Wealth is In Motion</h5>
         </div>
         <p class="text-body">
-          The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape individuals’ financial futures.
+          The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape
+          individuals’ financial futures.
         </p>
       </div>
     </div>
@@ -129,11 +131,12 @@
           <h5>People are Financially Illiterate</h5>
         </div>
         <p class="text-body">
-          The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for financial guidance and support.
+          The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
+          financial guidance and support.
         </p>
       </div>
       <div class="col-4 d-none d-md-block">
-        <img src="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid w-100" />
+        <img src="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
       </div>
     </div>
   </section>
@@ -172,7 +175,7 @@
     </div>
 
     <div class="d-none d-xl-block col-xl-4">
-      <img src="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid w-100" />
+      <img src="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
     </div>
   </div>
 </section>
