--- a/src/app/modules/landing/pages/contact/contact.component.html
+++ b/src/app/modules/landing/pages/contact/contact.component.html
@@ -1,16 +1,22 @@
 <!-- Hero Section -->
 <section class="sub-hero d-flex align-items-center justify-content-start">
     <div class="sub-hero-overlay"></div>
-    <div class="sub-hero-content mx-5">
-        <div class="row">
-            <h1 class="col-12 col-md-10 text-white ">Get in touch!</h1>
+    <div class="sub-hero-content mx-5 w-100">
+        <div class="row w-100">
+            <h2 class="col-12 col-md-7 text-white ">Get in touch with us</h2>
         </div>
 
-        <!-- <div class="row mt-3">
+        <div class="row mt-3">
             <h5 class="col-12 col-md-7 text-white ">
-                We look forward to connecting.
+                We're here to help you protect what matters most. Whether you have questions, need assistance, or want to explore coverage options, our team at Global Financial Impact is ready to assist. Contact us today and take the first step toward securing your future.
             </h5>
-        </div> -->
+        </div>
+
+        <div class="row mt-5">
+            <button mat-raised-button color="accent" class="col-auto">
+                Schedule a Consultation
+            </button>
+        </div>
     </div>
 </section>
 
