rezided images, added ngSrc for images

--- a/src/app/modules/landing/components/footer/footer.component.html
+++ b/src/app/modules/landing/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid">
+<footer class="container-fluid bg-primary-900">
   <div class="row justify-content-center p-5">
     <div class="col-8 col-md-4 order-4 order-md-1 d-flex flex-column">
       <img src="../../../../../assets/images/logo-white-complete.png" class="img-fluid">
