--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -51,8 +51,8 @@
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/family1.webp" alt="Family spending time together"
-          title="Build and secure your wealth." class="img-fluid" width="100%" height="540px" loading="lazy" />
+        <img mat-card-image ngSrc="assets/images/family1.webp" alt="Family spending time together"
+          title="Build and secure your wealth." class="img-fluid" width="1024" height="684" priority/>
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
@@ -64,7 +64,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
+        <img mat-card-image ngSrc="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" priority />
         <mat-card-content class="my-4">
           <h5>
             Start a business
@@ -76,7 +76,7 @@
 
     <div class="col-12 col-md-4 py-3">
       <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
+        <img mat-card-image ngSrc="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" priority />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
@@ -105,7 +105,7 @@
   <section class="container align-content-center">
     <div class="row">
       <div class="col-4 d-none d-md-block">
-        <img src="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
+        <img ngSrc="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
       </div>
       <div class="col-12 col-md-8">
         <div class="py-4">
@@ -136,7 +136,7 @@
         </p>
       </div>
       <div class="col-4 d-none d-md-block">
-        <img src="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
+        <img ngSrc="assets/images/office2.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" />
       </div>
     </div>
   </section>
@@ -175,7 +175,7 @@
     </div>
 
     <div class="d-none d-xl-block col-xl-4">
-      <img src="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
+      <img ngSrc="assets/images/family3.webp" alt="Placeholder Image" class="img-fluid"  width="1024" height="684" />
     </div>
   </div>
 </section>
