--- a/src/app/_shared/styles/custom.css
+++ b/src/app/_shared/styles/custom.css
@@ -153,4 +153,15 @@ h1 {
     white-space: nowrap;
 }
 
+.shadow-hover {
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    transition: all 0.3s ease;
+}
+
+.shadow-hover:hover {
+    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15); 
+    transform: translateY(-5px); 
+}
+
+
 /* #endregion */
