--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -21,19 +21,41 @@
     </div>
 </section>
 
-<section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h2>Become a GFI Partner</h2>
-        <p>We’re transforming the financial landscape, one entrepreneur at a time. We’re not just building a business;
+<section class="container py-5 my-4">
+    <div class="gap-2 py-2">
+        <h2 class="text-center">Become a GFC Partner</h2>
+        <p class="text-center text-body mt-3 col-lg-10 mx-auto">We’re transforming the financial landscape, one
+            entrepreneur at a time.
+            We’re not just building a business;
             we’re building a movement of financial professionals who are passionate about making a difference. Our goal
             is to equip individuals with the skills, knowledge, and resources they need to succeed in the world of
             finance.</p>
-        <p>
+        <p class="text-center text-body col-lg-10 mx-auto">
             We believe that everyone, regardless of their background or experience, deserves the opportunity to live a
             rich and fulfilling life. By joining our agency, you become part of a dynamic community dedicated to helping
             families secure their financial future, achieve their dreams, and create a lasting legacy. Together, we’re
             turning dreams into reality, one success story at a time.
         </p>
+    </div>
+    <div class="mt-2 row row-cols-lg-3 col-lg-10 mx-auto">
+        @for (item of PartnerPerks; track item.title) {
+        <div class="py-1 py-md-2 d-flex justify-content-center align-items-center">
+            <div
+                class="d-flex flex-column justify-content-center align-items-center border border-accent-500 rounded-2 p-3 shadow-hover w-100">
+                <div class="d-flex justify-content-center align-items-center mb-2 bg-primary-50 p-2 rounded-5">
+                    <lucide-icon [name]="item.image" size="30" class="text-primary-700"></lucide-icon>
+                </div>
+                <div class="text-center">
+                    <p class="fs-6 lh-sm fw-medium m-0 text-primary-900">{{item.title}}</p>
+                    <p class="mt-2" style="color: #a6a6a7">{{item.description}}
+                    </p>
+                </div>
+            </div>
+        </div>
+        }
+    </div>
+    <div class="d-flex justify-content-center align-content-center mt-2">
+        <button mat-raised-button>Join our team</button>
     </div>
 </section>
 
@@ -41,82 +63,118 @@
     <h6 class="text-secondary-600 text-center">THE GFI DIFFERENCE</h6>
     <h2 class="text-center">Inspirational Marketing</h2>
 
-    <div class="row mt-5 mb-5">
-        <div class="col-6">
-            <div>
-                <h5>{{ MarketingStrategies[0].title }}</h5>
-                <p class="mt-2" style="white-space: pre-line;">{{ MarketingStrategies[0].description }}</p>
-                <button mat-flat-button>Start Here</button>
-            </div>
-        </div>
-        <div class="col-6">
-            <div class="ms-5 position-relative">
-                <img src="https://globalfinancialimpact.com/wp-content/uploads/professional-man-2048x1365.webp"
-                    alt="Image 1" class="img-fluid" style="width: 60%;" loading="lazy">
-                <img src="https://globalfinancialimpact.com/wp-content/uploads/girl-in-green-e1700686911536.webp"
-                    alt="Image 2" class="img-fluid position-absolute" style="width: 40%; top: 20%; left: 40%;"
-                    loading="lazy">
-            </div>
-        </div>
+    <div class="col-12 mt-3 text-center d-lg-none d-block">
+        <img mat-card-image ngSrc="assets/images/business1.webp" alt="Business Woman"
+            title="Build and secure your wealth." class="img-fluid rounded-3" width="720" height="1080" />
     </div>
 
-    <div class="row justify-content-end mt-5 position-relative">
-        <img src="https://globalfinancialimpact.com/wp-content/uploads/asian-man.webp" alt="Image 1"
-            class="img-fluid position-absolute" style="width: 35%; top: -19%; left: 0%;">
-        <div class="col-4 mt-5" *ngFor="let item of MarketingStrategies.slice(1, 3)">
-            <div class="p-5 bg-accent-100 m-2 h-100">
-                <h5>{{ item.title }}</h5>
-                <p class="mt-2">{{ item.description }}</p>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-center bg-primary-300 p-5 mt-5">
-        <div class="col bg-white p-4 mx-4" *ngFor="let item of MarketingStrategies.slice(3)">
-            <h5>{{ item.title }}</h5>
-            <p class="mt-2">{{ item.description }}</p>
-        </div>
-    </div>
-</section>
-
-<section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600 text-center">Diversify Your Income</h6>
-        <h2 class="text-center">Multiple Income Streams</h2>
-    </div>
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
-        @for (item of IncomeStreamOptions; track item.title) {
-        <div class="col">
-            <div class="bg-accent-100 p-3 h-100 d-flex flex-column">
-                <h5 class="mb-2">{{item.title}}</h5>
-                <p class="mt-1">{{item.description}}</p>
-            </div>
-        </div>
-        }
-    </div>
-</section>
-
-<section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h6 class="text-secondary-600 text-center">Where Dreams Turn To Impact</h6>
-        <h2 class="text-center">Welcome to the GFI Family</h2>
-    </div>
-    <div class="row row-cols-2 row-cols-lg-4 mt-5">
-        @for (item of ImpactOptions; track item.description) {
-
-        <div class="col mb-2 mb-lg-0">
-            <div>
-                <div class="d-flex w-100">
-                    <img mat-card-image src={{item.image}} alt="Placeholder Image" class="img-fluid w-100"
-                        loading="lazy" />
+    <div class="row mt-lg-5 mt-3 align-items-stretch">
+        <div class="col-lg-4 col-12">
+            <div class="row row-cols-1 h-100">
+                @for (item of MarketingStrategies.slice(0, 2); track item.title) {
+                <div class="col py-1 py-md-2 d-flex">
+                    <div class="border rounded-2 p-3 shadow-hover w-100 align-content-center bg-accent-100">
+                        <div class="text-center">
+                            <h5 class="text-primary-900"><b>{{item.title}}</b></h5>
+                            <p class="mt-2 text-body" style="color: #a6a6a7">{{item.description}}</p>
+                        </div>
+                    </div>
                 </div>
-                <h5 class="mt-2">{{item.description}}</h5>
+                }
             </div>
         </div>
-        }
+
+        <div class="col-4 text-center d-none d-lg-block">
+            <img mat-card-image ngSrc="assets/images/business4.webp" alt="Business Woman"
+                title="Build and secure your wealth." class="img-fluid rounded-3 " width="720" height="1080" />
+        </div>
+
+        <div class="col-lg-4 col-12">
+            <div class="row row-cols-1 h-100">
+                @for (item of MarketingStrategies.slice(3, 5); track item.title) {
+                <div class="col py-1 py-md-2 d-flex">
+                    <div class="border rounded-2 p-3 shadow-hover w-100 align-content-center bg-accent-100">
+                        <div class="text-center">
+                            <h5 class="text-primary-900"><b>{{item.title}}</b></h5>
+                            <p class="mt-2 text-body" style="color: #a6a6a7">{{item.description}}</p>
+                        </div>
+                    </div>
+                </div>
+                }
+            </div>
+        </div>
     </div>
+    <div class="row mt-lg-2 mt-0" style="min-height: 200px;">
+        <div class="col-lg-6 col-12 py-1 py-md-2 d-flex">
+            <div class="border rounded-2 p-3 shadow-hover w-100 align-content-center bg-accent-100">
+                <div class="text-center">
+                    <h5 class="text-primary-900"><b>{{MarketingStrategies[3].title}}</b></h5>
+                    <p class="mt-2 text-body" style="color: #a6a6a7">{{MarketingStrategies[3].description}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-6 col-12 py-1 py-md-2 d-flex">
+            <div class="border rounded-2 p-3 shadow-hover w-100 align-content-center bg-accent-100">
+                <div class="text-center">
+                    <h5 class="text-primary-900"><b>{{MarketingStrategies[5].title}}</b></h5>
+                    <p class="mt-2 text-body" style="color: #a6a6a7">{{MarketingStrategies[5].description}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Botón centrado debajo -->
+    <div class="row mt-3">
+        <div class="col text-center">
+            <button mat-flat-button class="w-lg-50 w-100">Join our team</button>
+        </div>
+    </div>
+
 </section>
 
 <div class="bg-primary-800 text-white p-5">
+
+    <section class="container align-content-center py-5 my-4">
+        <div class="d-flex flex-column gap-2 py-2">
+            <h6 class="text-secondary-600 text-center">Where Dreams Turn To Impact</h6>
+            <h2 class="text-center text-white">Welcome to the GFI Family</h2>
+        </div>
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 mt-5 h-100">
+            @for (item of ImpactOptions; track item.description) {
+            <div class="col mb-2 mb-lg-0 d-flex">
+                <div class="">
+                    <div class="">
+                        <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024" height="684" loading="lazy" />
+                    </div>
+                    <p class="mt-2 text-body" style="color: white !important;">{{item.description}}</p>
+                </div>
+            </div>
+            }
+        </div>
+    </section>
+
+    <section class="container align-content-center py-5 my-4">
+        <div class="d-flex flex-column gap-2 py-2">
+            <h6 class="text-secondary-600 text-center">Diversify Your Income</h6>
+            <h2 class="text-center text-white">Multiple Income Streams</h2>
+        </div>
+        <div class="row mt-5">
+            @for (item of IncomeStreamOptions; track item.title) {
+            <div class="col-12 col-md-6 col-lg-4 py-1 py-md-2 d-flex">
+                <div class="border border-accent-500 rounded-2 p-3 shadow-hover w-100">
+                    <div class="d-flex">
+                        <lucide-icon [name]="item.image" class="me-2"></lucide-icon>
+                        <div>
+                            <p class="fs-6 lh-sm fw-medium m-0 text-white"><b>{{item.title}}</b></p>
+                            <p class="mt-2" style="color: #a6a6a7">{{item.description}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            }
+        </div>
+    </section>
+
     <section class="container align-content-center py-5 my-4">
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -140,13 +198,12 @@
             <div class="col-12 col-lg-6">
                 <mat-accordion class="">
                     @for (item of PartnerTypesOptions; track item.title) {
-                    <mat-expansion-panel class="bg-white text-primary-900">
+                    <mat-expansion-panel class="mat-elevation-z0 border-bottom">
                         <mat-expansion-panel-header>
-                            <mat-panel-title> {{item.title}} </mat-panel-title>
+                            <mat-panel-title class="text-white"> {{item.title}} </mat-panel-title>
                         </mat-expansion-panel-header>
                         <p>{{item.subtitle}}</p>
-                        <p>{{item.title}}</p>
-                        <p>{{item.body}}</p>
+                        <p class="text-white">{{item.body}}</p>
                     </mat-expansion-panel>
                     } @empty {
                     <li>There are no items.</li>
@@ -162,25 +219,28 @@
     <div class="d-flex flex-column gap-2 py-2">
         <h2 class="text-center">Getting Started Is Easy</h2>
     </div>
-    <div class="row row-cols-1 row-cols-md-3 mt-4">
+    <div class="row mt-4 position-relative">
+        <div class="d-none d-md-block position-absolute start-50 top-50 translate-middle bg-secondary-100" style="width: 80%; height: 4px; z-index: 0;"></div>
         @for (item of StartingPoints; track item.description) {
-        <div class="col">
-            <div class="bg-primary-50 p-3 h-75">
-                <div class="d-flex justify-content-end">
-                    <img src={{item.image}} alt="Placeholder Image" class="img-fluid w-50" loading="lazy" />
+        <div class="col-12 col-md position-relative d-flex mt-2 mt-lg-0">
+            <div class="bg-primary-50 p-3 rounded-2 mt-3">
+                <span class="position-absolute top-0 start-50 translate-middle-x">
+                    <p class="p-2 bg-primary-800 text-white rounded-1">{{item.step}}</p>
+                </span>
+                <div class="mt-3">
+                    <img ngSrc={{item.image}} alt="Placeholder Image" class="img-fluid rounded-3" width="1024" height="684" loading="lazy" />
                 </div>
-                <div class="mt-5 ">
-                    <h6 class="fw-bold">{{ item.step }}</h6>
-                    <h3 style="white-space: pre-line;">{{ item.title }}</h3>
+                <div class="mt-2">
+                    <p class="text-body" style="white-space: pre-line;"><b>{{item.title}}</b></p>
+                    <p class="fw-light">{{ item.description }}</p>
                 </div>
             </div>
-            <p class="mt-4 fs-5 lh-base fw-light">{{ item.description }}</p>
         </div>
         }
     </div>
 </section>
 
-<div class="bg-primary-800 text-white">
+<!-- <div class="bg-primary-800 text-white">
     <section class="container py-5 my-4" style="height: auto;">
         <div class="row" style="height: 30rem;">
             <div class="col-4 mt-5">
@@ -222,32 +282,30 @@
         <div>
         </div>
     </section>
-</div>
+</div> -->
 
 <!-- FAQs -->
-<div class="py-5 bg-primary-900">
-    <section class="container align-content-center py-4">
-        <div class="row">
-            <div class="col-12 col-md-3 text-center py-2">
-                <h2 class="text-white">FAQs</h2>
-            </div>
-
-            <div class="col-12 col-md-9">
-                <mat-accordion>
-                    @for (item of FaqsItems; track item.title) {
-                    <mat-expansion-panel class="mat-elevation-z0 border-bottom">
-                        <mat-expansion-panel-header>
-                            <mat-panel-title class="text-white"> {{item.title}} </mat-panel-title>
-                        </mat-expansion-panel-header>
-                        <p class="text-white">{{item.description}}</p>
-                    </mat-expansion-panel>
-                    } @empty {
-                    <li>There are no items.</li>
-                    }
-                </mat-accordion>
-            </div>
+<section class="container align-content-center py-4">
+    <div class="row">
+        <div class="col-12 col-md-3 text-center py-2">
+            <h2 class="">FAQs</h2>
         </div>
-    </section>
-</div>
+
+        <div class="col-12 col-md-9">
+            <mat-accordion>
+                @for (item of FaqsItems; track item.title) {
+                <mat-expansion-panel class="mat-elevation-z0 border-bottom">
+                    <mat-expansion-panel-header>
+                        <mat-panel-title> {{item.title}} </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <p class="">{{item.description}}</p>
+                </mat-expansion-panel>
+                } @empty {
+                <li>There are no items.</li>
+                }
+            </mat-accordion>
+        </div>
+    </div>
+</section>
 
 <app-footer></app-footer>
