added trsuted partners

--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -65,7 +65,7 @@
 
     <div class="col-12 mt-3 text-center d-lg-none d-block">
         <img mat-card-image ngSrc="assets/images/business1.webp" alt="Business Woman"
-            title="Build and secure your wealth." class="img-fluid rounded-3" width="720" height="1080" />
+            title="Build and secure your wealth." class="img-fluid rounded-3" width="720" height="1080" loading="lazy" />
     </div>
 
     <div class="row mt-lg-5 mt-3 align-items-stretch">
@@ -86,7 +86,7 @@
 
         <div class="col-4 text-center d-none d-lg-block">
             <img mat-card-image ngSrc="assets/images/business4.webp" alt="Business Woman"
-                title="Build and secure your wealth." class="img-fluid rounded-3 " width="720" height="1080" />
+                title="Build and secure your wealth." class="img-fluid rounded-3 " width="720" height="1080" loading="lazy"/>
         </div>
 
         <div class="col-lg-4 col-12">
