--- a/src/app/modules/landing/pages/services/services.component.html
+++ b/src/app/modules/landing/pages/services/services.component.html
@@ -168,24 +168,17 @@
     <h6>As part of our commitment to our clients, each of our providers we partner with are rated A or higher by
       industry standards.</h6>
   </div>
-  <div class="slider bg-primary-900 mt-5" style="
-            --width: 100px;
-            --height: 50px;
-            --quantity: 10;
-        ">
-    <div class="list">
-      <div class="item" style="--position: 1"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 2"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 3"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 4"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 5"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 6"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 7"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 8"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 9"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
-      <div class="item" style="--position: 10"><img src="assets/images/logo-white-complete.png" alt="" loading="lazy"></div>
+  <div class="slider mt-5" 
+     [ngStyle]="{'--width': '200px', '--height': '200px', '--quantity': Partners.length}">>
+  <div class="list">
+    <div 
+      class="item" 
+      *ngFor="let partner of Partners; let i = index" 
+      [ngStyle]="{'--position': (i + 1)}">
+      <img [src]="partner" alt="Partner logo" loading="lazy" class="w-75">
     </div>
   </div>
+</div>
 </section>
 
 <!-- FAQs -->
