--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -50,38 +50,38 @@
 
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/family1.webp" alt="Family spending time together"
-          title="Build and secure your wealth." class="img-fluid" width="100%" height="540px" loading="lazy" />
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img src="assets/images/family1.webp" alt="Family spending time together"
+          title="Build and secure your wealth." class="img-fluid px-2 pt-2" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
           </h5>
-          <button mat-button>Become a Client</button>
+          <p class="text-link">Become a Client</p>
         </mat-card-content>
       </mat-card>
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img src="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid px-2 pt-2" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Start a business
           </h5>
-          <button mat-button>Become a Partner</button>
+          <p class="text-link">Become a Partner</p>
         </mat-card-content>
       </mat-card>
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img src="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid px-2 pt-2" loading="lazy" />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
           </h5>
-          <button mat-button>Make an impact</button>
+          <p class="text-link">Make an impact</p>
         </mat-card-content>
       </mat-card>
     </div>
@@ -108,9 +108,9 @@
         <img src="assets/images/family2.webp" alt="Placeholder Image" class="img-fluid w-100" loading="lazy" />
       </div>
       <div class="col-12 col-md-8">
-        <div class="py-4">
+        <div class="d-flex flex-column gap-2 py-2">
           <h2>$68 Trillion</h2>
-          <h5>Generational Wealth is In Motion</h5>
+          <h6>Generational Wealth is In Motion</h6>
         </div>
         <p class="text-body">
           The colossal exchange of $68 trillion in generational wealth represents a tremendous opportunity to reshape
@@ -126,9 +126,9 @@
   <section class="container align-content-center">
     <div class="row">
       <div class="col-12 col-md-8">
-        <div class="py-4">
+        <div class="d-flex flex-column gap-2 py-2">
           <h2>4.5 Billion</h2>
-          <h5>People are Financially Illiterate</h5>
+          <h6>People are Financially Illiterate</h6>
         </div>
         <p class="text-body">
           The alarming fact that 4.5 billion people suffer from financial illiteracy highlights the urgent need for
