--- a/src/app/_shared/styles/custom.css
+++ b/src/app/_shared/styles/custom.css
@@ -21,11 +21,11 @@ h6 {
 h5 {
     font-family: Instrument Sans, sans-serif !important;
     color: var(--primary-900) !important;
-    font-weight: 400 !important;
+    font-weight: 550 !important;
     font-size: clamp(1.125rem, 2vw, 1.5rem) !important;
     line-height: var(--lh-sm) !important;
     letter-spacing: 0.009rem !important;
-    letter-spacing: 0.1rem !important;
+    letter-spacing: 0.01rem !important;
 }
 
 h4 {
@@ -117,13 +117,12 @@ h1 {
 
 .text-link {
     color: var(--primary-600);
-    font-family: "Montserrat";
+    font-family: Instrument Sans, sans-serif !important;;
     font-weight: 400;
     font-size: var(--fs-md);
     line-height: var(--lh-xxsm);
     letter-spacing: 0.1rem !important;
     cursor: pointer;
-    text-decoration: underline;
 }
 
 .text-link:hover,
