--- a/src/app/modules/landing/pages/business-platform/business-platform.component.html
+++ b/src/app/modules/landing/pages/business-platform/business-platform.component.html
@@ -21,27 +21,41 @@
     </div>
 </section>
 
+<!-- Become a GFI Partner -->
 <section class="container align-content-center py-5 my-4">
-    <div class="d-flex flex-column gap-2 py-2">
-        <h2>Become a GFI Partner</h2>
-        <p>We’re transforming the financial landscape, one entrepreneur at a time. We’re not just building a business;
-            we’re building a movement of financial professionals who are passionate about making a difference. Our goal
-            is to equip individuals with the skills, knowledge, and resources they need to succeed in the world of
-            finance.</p>
-        <p>
-            We believe that everyone, regardless of their background or experience, deserves the opportunity to live a
-            rich and fulfilling life. By joining our agency, you become part of a dynamic community dedicated to helping
-            families secure their financial future, achieve their dreams, and create a lasting legacy. Together, we’re
-            turning dreams into reality, one success story at a time.
-        </p>
+    <div class="row">
+        <div class="col-12 col-md-7">
+            <div class="py-4">
+                <h2>Become a GFI Partner</h2>
+            </div>
+            <p class="text-body">
+                We’re transforming the financial landscape, one entrepreneur at a time. We’re not just building a business;
+                we’re building a movement of financial professionals who are passionate about making a difference. Our goal
+                is to equip individuals with the skills, knowledge, and resources they need to succeed in the world of
+                finance.
+            </p>
+            <p class="text-body">
+                We believe that everyone, regardless of their background or experience, deserves the opportunity to live a
+                rich and fulfilling life. By joining our agency, you become part of a dynamic community dedicated to helping
+                families secure their financial future, achieve their dreams, and create a lasting legacy. Together, we’re
+                turning dreams into reality, one success story at a time.
+            </p>
+            <button mat-raised-button>Start your Application</button>
+        </div>
+        <div class="col-5 d-none d-md-block">
+            <img src="assets/images/family4.webp" alt="Placeholder Image" class="img-fluid" loading="lazy" />
+        </div>
     </div>
 </section>
 
+<!-- Inspirational Marketing -->
 <section class="container py-5 my-4">
-    <h6 class="text-secondary-600 text-center">THE GFI DIFFERENCE</h6>
-    <h2 class="text-center">Inspirational Marketing</h2>
+    <div class="d-flex flex-column text-center gap-2 py-2">
+        <h6 class="text-secondary-600 text-center">THE GFI DIFFERENCE</h6>
+        <h2 class="text-center">Inspirational Marketing</h2>
+    </div>
 
-    <div class="row mt-5 mb-5">
+    <div class="row py-5">
         <div class="col-6">
             <div>
                 <h5>{{ MarketingStrategies[0].title }}</h5>
@@ -78,6 +92,7 @@
     </div>
 </section>
 
+<!-- Multiple income streams -->
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
         <h6 class="text-secondary-600 text-center">Diversify Your Income</h6>
@@ -95,6 +110,7 @@
     </div>
 </section>
 
+<!-- Welcome to the GFI family -->
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
         <h6 class="text-secondary-600 text-center">Where Dreams Turn To Impact</h6>
@@ -116,6 +132,7 @@
     </div>
 </section>
 
+<!-- 6 Ways to become a GFI partner -->
 <div class="bg-primary-800 text-white p-5">
     <section class="container align-content-center py-5 my-4">
         <div class="row">
@@ -158,6 +175,7 @@
     </section>
 </div>
 
+<!-- Step by step -->
 <section class="container align-content-center py-5 my-4">
     <div class="d-flex flex-column gap-2 py-2">
         <h2 class="text-center">Getting Started Is Easy</h2>
@@ -180,6 +198,7 @@
     </div>
 </section>
 
+<!-- Make your life a story worth telling -->
 <div class="bg-primary-800 text-white">
     <section class="container py-5 my-4" style="height: auto;">
         <div class="row" style="height: 30rem;">
