--- a/src/app/modules/landing/pages/home/home.component.css
+++ b/src/app/modules/landing/pages/home/home.component.css
@@ -30,3 +30,7 @@
 .border-right {
     border-right: 2px solid var(--primary-900)
 }
+
+.hoverable-card:hover {
+    background-color: var(--primary-50);
+}
