--- a/src/app/modules/landing/pages/home/home.component.html
+++ b/src/app/modules/landing/pages/home/home.component.html
@@ -50,9 +50,9 @@
 
   <div class="row py-5">
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image ngSrc="assets/images/family1.webp" alt="Family spending time together"
-          title="Build and secure your wealth." class="img-fluid" width="1024" height="684" priority/>
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img ngSrc="assets/images/family1.webp" alt="Family spending time together"
+          title="Build and secure your wealth." class="img-fluid p-2" width="1024" height="684" priority/>
         <mat-card-content class="my-4">
           <h5>
             Build and secure your wealth.
@@ -63,8 +63,8 @@
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image ngSrc="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" priority />
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img ngSrc="assets/images/office1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684" priority />
         <mat-card-content class="my-4">
           <h5>
             Start a business
@@ -75,8 +75,8 @@
     </div>
 
     <div class="col-12 col-md-4 py-3">
-      <mat-card class="h-100" appearance="outlined" class="transparent">
-        <img mat-card-image ngSrc="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid" width="1024" height="684" priority />
+      <mat-card class="h-100" appearance="outlined" class="transparent hoverable-card">
+        <img ngSrc="assets/images/hands1.webp" alt="Placeholder Image" class="img-fluid p-2" width="1024" height="684" priority />
         <mat-card-content class="my-4">
           <h5>
             Donate and contribute
